adapt status bar for tmux to match config for screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set-option -g bell-action any
 # Window title
 
 set-option -g set-titles on
-set-option -g set-titles-string '#I: #T (#W)'
+set-option -g set-titles-string '#I: #T (#W)' 
 # set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
 
 set-option -g status-keys emacs
@@ -50,14 +50,14 @@ setw -g mode-bg black
 
 set-option -g status-utf8 on
 set-option -g status-bg black
-set-option -g status-fg white
+set-option -g status-fg green
 
 # Refresh period
 set -g status-interval 1
 
 # Left Panel
 set-option -g status-left-length 40
-set -g status-left '#[fg=green]#H#  #[fg=green]][#[default]'
+set -g status-left '#[fg=green,bold]#H#  #[default]]['
 
 # Right panel
 set -g status-right '#[fg=green]][ #[fg=cyan]%Y-%m-%d #[fg=white]%H:%M#[default]'
@@ -65,14 +65,15 @@ set -g status-right '#[fg=green]][ #[fg=cyan]%Y-%m-%d #[fg=white]%H:%M#[default]
 # Active windows
 set-option -g status-justify centre
 setw -g window-status-bg black
-setw -g window-status-current-fg yellow
-setw -g automatic-rename
+setw -g window-status-format '#I #W #F'
+setw -g window-status-current-fg white
+setw -g window-status-current-format '#[fg=red](#[default]#I #W#[fg=red])#[default]'
+
+# setw -g automatic-rename
 
 # Alerts
 setw -g window-status-alert-attr default
 setw -g window-status-alert-fg yellow
-
-
 
 
 ## BINDINGS
@@ -81,10 +82,11 @@ bind r source-file ~/.tmux.conf
 
 bind s split-window
 bind S split-window -h
+
 bind x kill-pane
+bind k kill-window
 
-bind-key F1 list-keys
-bind-key F2 choose-window
-bind-key F3 previous-window
-bind-key F4 next-window
-
+bind-key -n F1 list-keys
+bind-key -n F2 choose-window
+bind-key -n F3 previous-window
+bind-key -n F4 next-window
