add ssh binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set-option -g bell-action any
 # Window title
 
 set-option -g set-titles on
-set-option -g set-titles-string '#I: #T (#W)' 
+set-option -g set-titles-string '#I: #T (#W)'
 # set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
 
 set-option -g status-keys emacs
@@ -90,3 +90,5 @@ bind-key -n F1 list-keys
 bind-key -n F2 choose-window
 bind-key -n F3 previous-window
 bind-key -n F4 next-window
+
+bind-key R command-prompt -p "ssh: " "new-window -n %1 'ssh %1'"
