Add some key bindings to the tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,11 +78,18 @@ setw -g window-status-alert-fg yellow
 
 ## BINDINGS
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message " Config reloaded..."
 
+bind b last-window
+
+bind-key m command-prompt -p "swap window with:" "swap-window -t ':%%'"
+bind-key M command-prompt -p "move window to:" "move-window -t ':%%'"
+
+# Split windows
 bind s split-window
 bind S split-window -h
 
+# Kill windows
 bind x kill-pane
 bind k kill-window
 
