FIX: disable mouse mode so that selecting a region with the mouse works again

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,8 @@ set-option -g status-keys emacs
 set-option -g visual-bell on
 
 setw -g mode-keys emacs
-setw -g mode-mouse on
+# If this is enabled, text selection with the mouse won't work unless shift is pressed
+# setw -g mode-mouse on
 
 # Notify when a window has activity
 setw -g monitor-activity on
