Minor customizations for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,10 +10,15 @@ unbind-key C-b
 
 # 0 is too far from ` ;)
 set -g base-index 1
+set -g pane-base-index 1
+
 
 setw -g utf8 on
 
 set -g history-limit 4096
+
+# Reduce delay when sending commands
+set -sg escape-time 1
 
 # Breaks window list
 # set-option -g default-terminal "screen-256color"
@@ -65,7 +70,7 @@ set -g status-right '#[fg=green]][ #[fg=cyan]%Y-%m-%d #[fg=white]%H:%M#[default]
 
 # Active windows
 set-option -g status-justify centre
-setw -g window-status-bg black
+setw -g window-status-bg default
 setw -g window-status-format '#I #W #F'
 setw -g window-status-current-fg white
 setw -g window-status-current-format '#[fg=red](#[default]#I #W#[fg=red])#[default]'
@@ -89,9 +94,10 @@ bind S split-window -h
 bind x kill-pane
 bind k kill-window
 
-bind-key -n F1 list-keys
-bind-key -n F2 choose-window
-bind-key -n F3 previous-window
-bind-key -n F4 next-window
+# resize panels
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
 bind-key R command-prompt -p "ssh: " "new-window -n %1 'ssh %1'"
