Add session name to config

--- a/tmux.conf
+++ b/tmux.conf
@@ -58,7 +58,7 @@ set -g status-interval 1
 
 # Left Panel
 set-option -g status-left-length 40
-set -g status-left '#[fg=green,bold]#H#  #[default]]['
+set -g status-left '#[fg=green,bold]#H#  - #S# #[default]]['
 
 # Right panel
 set -g status-right '#[fg=green]][ #[fg=cyan]%Y-%m-%d #[fg=white]%H:%M#[default]'
