--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@
 set-option -g prefix C-x
 unbind-key C-b
 
+# Allow a second level of tmux (for ssh)
+bind-key -n C-s send-prefix
+
 # 0 is too far from ` ;)
 set -g base-index 1
 set -g pane-base-index 1
