Add setting to tmux to avoid resizing window

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,6 +41,8 @@ setw -g mode-keys emacs
 # If this is enabled, text selection with the mouse won't work unless shift is pressed
 # setw -g mode-mouse on
 
+# Don't constrain the size of a session to the smallest client
+setw -g aggressive-resize on
 # Notify when a window has activity
 setw -g monitor-activity on
 set -g visual-activity on
