Use tpm for managing tmux plugins

--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -15,34 +15,24 @@ bind-key -n C-s send-prefix
 set -g base-index 1
 set -g pane-base-index 1
 
-
-setw -g utf8 on
-
-set -g history-limit 4096
-
-# Reduce delay when sending commands
-set -sg escape-time 1
-
 # Breaks window list
 # set-option -g default-terminal "screen-256color"
 set-option -g mouse-select-pane on
 set-option -g bell-action any
 
-# Window title
+# tmux messages are displayed for 2 seconds
+set -g display-time 2000
 
+# Window title
 set-option -g set-titles on
 set-option -g set-titles-string '#I: #T (#W)'
 # set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
 
-set-option -g status-keys emacs
 set-option -g visual-bell on
 
-setw -g mode-keys emacs
 # If this is enabled, text selection with the mouse won't work unless shift is pressed
 # setw -g mode-mouse on
 
-# Don't constrain the size of a session to the smallest client
-setw -g aggressive-resize on
 # Notify when a window has activity
 setw -g monitor-activity on
 set -g visual-activity on
@@ -59,12 +49,8 @@ setw -g mode-bg black
 
 ## STATUS BAR
 
-set-option -g status-utf8 on
 set-option -g status-bg black
 set-option -g status-fg green
-
-# Refresh period
-set -g status-interval 1
 
 # Left Panel
 set-option -g status-left-length 40
@@ -84,8 +70,6 @@ setw -g window-status-current-format '#[fg=red](#[default]#I #W#[fg=red])#[defau
 
 ## BINDINGS
 
-bind r source-file ~/.tmux.conf \; display-message " Config reloaded..."
-
 bind b last-window
 
 bind-key m command-prompt -p "swap window with:" "swap-window -t ':%%'"
@@ -99,10 +83,12 @@ bind S split-window -h
 bind x kill-pane
 bind k kill-window
 
-# resize panels
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+## TPM
 
-bind-key R command-prompt -p "ssh: " "new-window -n %1 'ssh %1'"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
