--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -91,4 +91,7 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+if "test ! -d ~/.tmux/plugins/tpm" \
+       "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
 run '~/.tmux/plugins/tpm/tpm'
