config to make notifications work

--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -15,6 +15,9 @@ bind-key -n C-s send-prefix
 set -g base-index 1
 set -g pane-base-index 1
 
+# OS X trickery to get notifications
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+
 # Breaks window list
 # set-option -g default-terminal "screen-256color"
 set-option -g bell-action any
