--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -88,6 +88,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'jooize/tmux-powerline-theme'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 if "test ! -d ~/.tmux/plugins/tpm" \
