enable powerline symbols

--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -82,6 +82,13 @@ bind S split-window -h
 bind x kill-pane
 bind k kill-window
 
+#
+# Powerline theme
+#
+
+# Enable Powerline symbols (unless already specified otherwise in environment)
+if-shell ': ${TMUX_POWERLINE_SYMBOLS?}' '' 'set-environment -g TMUX_POWERLINE_SYMBOLS "powerline"'
+
 ## TPM
 
 set -g @plugin 'tmux-plugins/tpm'
