Switch copy mode for tmux to vi bindings

--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -4,6 +4,9 @@
 #
 # Author: Mario Fernandez
 
+# Use vi bindings for copy mode
+set-window-option -g mode-keys vi
+
 # Use C-x instead of C-b
 set-option -g prefix C-x
 unbind-key C-b
@@ -81,6 +84,10 @@ bind S split-window -h
 # Kill windows
 bind x kill-pane
 bind k kill-window
+
+# Vi-like copy
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 #
 # Powerline theme
