--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -30,8 +30,7 @@ set -g display-time 2000
 
 # Window title
 set-option -g set-titles on
-set-option -g set-titles-string '#I: #T (#W)'
-# set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
+set-option -g set-titles-string '#I: #T'
 
 set-option -g visual-bell on
 
@@ -68,7 +67,10 @@ setw -g window-status-format '#I #W #F'
 setw -g window-status-current-fg white
 setw -g window-status-current-format '#[fg=red](#[default]#I #W#[fg=red])#[default]'
 
-# setw -g automatic-rename
+# What each menu item displays
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_title}'
 
 ## BINDINGS
 
