--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -38,34 +38,29 @@ set-option -g visual-bell on
 setw -g monitor-activity on
 set -g visual-activity on
 
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg black
-set-option -g pane-border-fg white
-set-option -g pane-border-bg black
+set-option -g pane-active-border-style fg=green,bg=black
+set-option -g pane-border-style fg=white,bg=black
 
-set-option -g message-fg black
-set-option -g message-bg green
+set-option -g message-style fg=black,bg=green
 
-setw -g mode-bg black
+setw -g mode-style bg=black
 
 ## STATUS BAR
 
-set-option -g status-bg black
-set-option -g status-fg green
+set-option -g status-style bg=black,fg=green
 
 # Left Panel
-set-option -g status-left-length 40
-set -g status-left '#[fg=green,bold]#H#  - #S# #[default]]['
+# set -g status-left '#[fg=green,bold]#H#  - #S# #[default]]['
 
 # Right panel
-set -g status-right '#[fg=green]][ #[fg=cyan]%Y-%m-%d #[fg=white]%H:%M#[default]'
+# set -g status-right '#[fg=green]][ #[fg=cyan]%Y-%m-%d #[fg=white]%H:%M#[default]'
 
 # Active windows
-set-option -g status-justify centre
-setw -g window-status-bg default
-setw -g window-status-format '#I #W #F'
-setw -g window-status-current-fg white
-setw -g window-status-current-format '#[fg=red](#[default]#I #W#[fg=red])#[default]'
+# set-option -g status-justify centre
+# setw -g window-status-style bg=default
+# setw -g window-status-format '#I #W #F'
+# setw -g window-status-current-style fg=white
+# setw -g window-status-current-format '#[fg=red](#[default]#I #W#[fg=red])#[default]'
 
 # What each menu item displays
 set-option -g status-interval 5
