fix theme not loading

--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -101,6 +101,9 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'jooize/tmux-powerline-theme'
 
+# Just loading the plugin is not working anymore for some reason
+run-shell "source $HOME/.tmux/plugins/tmux-powerline-theme/powerline-theme.tmux"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 if "test ! -d ~/.tmux/plugins/tpm" \
        "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
