--- a/rc/tmux.conf
+++ b/rc/tmux.conf
@@ -65,7 +65,7 @@ set-option -g status-style bg=black,fg=green
 # What each menu item displays
 set-option -g status-interval 5
 set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_title}'
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 ## BINDINGS
 
